--- a/ATM/ATM/ATM.csproj
+++ b/ATM/ATM/ATM.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ATM.cs" />
+    <Compile Include="Classes\Cash.cs" />
+    <Compile Include="Classes\Card.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
